--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -36,6 +36,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="name_list.html">Name List</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="form_demo.html">Form Demo <span class="sr-only">(current)</span></a>
+            </li>
         </ul>
     </div>
 </nav>
