--- a/src/main/webapp/WEB-INF/meme.html
+++ b/src/main/webapp/WEB-INF/meme.html
@@ -44,8 +44,9 @@
 </nav>
 
 <div class="container">
-    <h1>Mason Spree's Index Page for CIS 320 Work</h1>
-    <p>Hi</p>
+    <h2>Meme Generator</h2>
+    <p>Enter your message:</p>
+    <form action = "meme" method = "get"></form>
 </div>
 
 <!-- Load JavaScript -->
