--- a/src/main/webapp/form_demo.html
+++ b/src/main/webapp/form_demo.html
@@ -47,7 +47,7 @@
                 <a class="nav-link" href="name_list.html">Name List</a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link" href="form_demo.html">Form Demo <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="form_demo.html">Form Demo</a>
             </li>
         </ul>
     </div>
