--- a/src/main/webapp/name_list.html
+++ b/src/main/webapp/name_list.html
@@ -38,7 +38,7 @@
                     <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="form_demo.html">Form Demo <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="form_demo.html">Form Demo</a>
             </li>
         </ul>
     </div>
@@ -97,19 +97,19 @@
                         <input type="text" id="firstName" name="firstName" class="form-control"
                                placeholder="First name"><br>
 
-                        <label for="lastName"></label>
+                        <label for="lastName">Last Name:</label>
                         <input type="text" id="lastName" name="lastName" class="form-control"
                                placeholder="Last name"><br>
 
-                        <label for="email"></label>
+                        <label for="email">Email:</label>
                         <input type="email" id="email" name="email" class="form-control"
                                placeholder="Email address"><br>
 
-                        <label for="phoneNumber"></label>
+                        <label for="phoneNumber">Phone Number:</label>
                         <input type="text" id="phoneNumber" name="phoneNumber" class="form-control"
                                placeholder="Phone number"><br>
 
-                        <label for="birthday"></label>
+                        <label for="birthday">Birthday:</label>
                         <input type="date" id="birthday" name="birthday" class="form-control"
                                placeholder="birthday"><br>
                     </div>
