--- a/src/main/webapp/name_list.html
+++ b/src/main/webapp/name_list.html
@@ -64,6 +64,7 @@
             <th>E-mail address</th>
             <th>Phone number</th>
             <th>Birthday</th>
+            <th>Actions</th>
         </tr>
         </thead>
         <!-- Data -->
